--- a/views/recipeForm.html
+++ b/views/recipeForm.html
@@ -2,17 +2,17 @@
 <section>
 <form action="">
   <h3>Ingredients:</h3>
-  <input type="text" placeholder="1/2">
+  <input type="text" ng-model="newRecipe.ingredient.mesNumber" placeholder="1/2">
   <select>
-    <option value="cup">Cups</option>
-    <option value="tbsp">Tablespoons</option>
-    <option value="tsp">Teaspoons</option>
-    <option value="pints">Pints</option>
-    <option value="qts">Quarts</option>
-    <option value="gallons">Gallons</option>
+    <option ng-model="newRecipe.ingredient.mesType" value="cup">Cups</option>
+    <option ng-model="newRecipe.ingredient.mesType" value="tbsp">Tablespoons</option>
+    <option ng-model="newRecipe.ingredient.mesType" value="tsp">Teaspoons</option>
+    <option ng-model="newRecipe.ingredient.mesType" value="pints">Pints</option>
+    <option ng-model="newRecipe.ingredient.mesType" value="qts">Quarts</option>
+    <option ng-model="newRecipe.ingredient.mesType" value="gallons">Gallons</option>
   </select>
-  <input type="text" placeholder="Ingredient">
-  <button>Add</button>
+  <input type="text" placeholder="Ingredient" ng-model="newRecipe.ingredient.type">
+  <button ng-click="addIngredient(newRecipe.ingredient)">Add</button>
   <h3>Instructions:</h3>
   <textarea ng-model="newRecipe.instructions" name="" id="" cols="30" rows="10">Instructions</textarea>
   <button type="submit">Finish Recipe</button>
@@ -22,6 +22,9 @@
 <aside>
 
   <h2>Recipe Preview:</h2>
+  <ul>
+    <li>{{newRecipe.ingredient.mesNumber}} {{newRecipe.ingredient.mesType}} {{newRecipe.ingredient.type}}</li>
+  </ul>
   <p>{{newRecipe.instructions}}</p>
 
 
