--- a/views/recipeForm.html
+++ b/views/recipeForm.html
@@ -1,6 +1,8 @@
 <h2>Add a new recipe:</h2>
 <section>
 <form action="">
+  <h3>Title:</h3>
+  <input type="text" ng-model="newRecipe.title">
   <h3>Ingredients:</h3>
   <input type="text" ng-model="newRecipe.ingredient.mesNumber" placeholder="1/2">
   <select>
@@ -22,6 +24,7 @@
 <aside>
 
   <h2>Recipe Preview:</h2>
+  <h3>{{newRecipe.title}}</h3>
   <ul>
     <li>{{newRecipe.ingredient.mesNumber}} {{newRecipe.ingredient.mesType}} {{newRecipe.ingredient.type}}</li>
   </ul>
