--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<h1>Welcome to our app</h1>
+<h2>Let's get started.</h2>
 
 
 
@@ -33,5 +33,6 @@
 <button class="homeButtons" ng-click="addToGList()">Add to Grocery List</button>
 
 </div>
+
 
 </div>
