--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,31 +3,23 @@ $red:#D26F46;
 $blue:#7BB7AD;
 $green:#807E58;
 $brown:#5F5A44;
-
+///////////////////////////START HOME
 body {
   margin:0;
   padding:0;
   background-color:$blue;
 }
-header{
-  padding:1% 2%;
-  span{
-    float:right;
-    font-size:2.5em;
-    margin:0;
-    padding:0;
-  }
-  a{
-    color:$yellow;
-  }
-  h1{
-    color:$yellow;
-    display:inline-block;
-    margin:0;
-    padding:0;
-  }
+
+h2 {
+    color:white;
+}
+
+header {
+    text-align:center;
 
 }
+
+
 img.bg {
   min-height: 100%;
   min-width: 100%;
@@ -38,3 +30,25 @@ img.bg {
   left: 0;
   z-index:-1;
   }
+
+ #homeLogo {
+     opacity:.8;
+     width:40%;
+     height:auto;
+     margin-right:auto;
+     margin-left:auto;
+ }
+
+
+ .fa {
+     font-size:4em;
+     color:white;
+     margin: 0px; margin-top: 5px; margin-right:5px;
+     opacity:.8;
+     transition:opacity .3s ease-in-out;
+ }
+
+ .fa:hover {
+     opacity:1;
+ }
+////////////////////////////////END HOME
