--- a/styles/main.scss
+++ b/styles/main.scss
@@ -38,3 +38,9 @@ img.bg {
   left: 0;
   z-index:-1;
   }
+
+.groceryWrap{
+  background-color:rgba(0, 0, 0, 0.5);
+  color:white;
+  font-family: 'Cutive', serif;
+}
