--- a/views/groceryList.html
+++ b/views/groceryList.html
@@ -1,9 +1,5 @@
-<h2>Grocery List:</h2>
-<section>
-<form action="">
-  <h3>Items:</h3>
 
-<div ng-controller="groceryController">
+<div class="groceryWrap" ng-controller="groceryController">
 <h2>Groceries:<h2>
   <ul>
     <li ng-repeat="item in items">
