fixed delete function

--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
         <div>
 
         <button class="homeButtons" ng-click="addToGList()">Add</button>
-        <button class="homeButtons" ng-click="deleteRecipe()">Delete</button>
+        <button class="homeButtons" ng-click="deleteRecipe($index)">Delete</button>
 
       </div>
 
