--- a/views/groceryList.html
+++ b/views/groceryList.html
@@ -2,7 +2,7 @@
 <div class="groceryWrap" ng-controller="groceryController">
 <h2>Groceries:<h2>
   <ul>
-    <li ng-repeat="item in finalIngreds">
+    <li ng-repeat="item in groceryList">
       <span>{{item}}</span>
     </li>
   </ul>
@@ -10,7 +10,4 @@
     <input class="add-input" placeholder="need something else?" type="text" ng-model="formitemText" ng-model-instant/>
     <button class="add-btn" ng-click="additem()"><h2>Add</h2></button>
   </form>
-
-  <button class="clear-btn" ng-click="clearCompleted()">Clear completed</button>
-
 </div>
