--- a/views/home.html
+++ b/views/home.html
@@ -18,7 +18,7 @@
 
         <div>
 
-        <button class="homeButtons" ng-click="addToGList()">Add</button>
+        <button class="homeButtons" ng-click="addToGrocery($index)">Add</button>
         <button class="homeButtons" ng-click="deleteRecipe($index)">Delete</button>
 
       </div>
