--- a/styles/main.css
+++ b/styles/main.css
@@ -2,8 +2,7 @@ html, body {
   height: 100%;
   background-image: url("../images/bg.png");
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: fixed; }
+  background-repeat: no-repeat; }
 
 h2, h3 {
   color: white; }
@@ -33,10 +32,8 @@ img.bg {
 
 #homeLogo {
   opacity: 0.8;
-  max-width: 400px;
-  height: auto;
-  /* margin-right:auto;
-     margin-left:auto; */ }
+  max-width: 350px;
+  height: auto; }
 
 #homeLogo:hover {
   opacity: 1; }
@@ -55,6 +52,7 @@ img.bg {
   opacity: 1; }
 
 .accHead {
+  overflow: auto;
   color: black;
   border: none; }
   .accHead .panel {
@@ -64,7 +62,10 @@ img.bg {
 
 .homeWrap {
   font-size: 1.2em;
-  margin-top: 20%; }
+  margin: 10%;
+  margin-top: 10%;
+  height: 340px;
+  overflow: auto; }
 
 .groceryWrap {
   background-color: rgba(0, 0, 0, 0.5);
@@ -73,14 +74,16 @@ img.bg {
 
 .addWrap {
   width: 100%;
-  display: inline-block;
+  height: 60%;
+  margin: 10px;
+  overflow: auto;
   font-family: 'Lato', sans-serif; }
 
 section {
   display: inline-block;
-  width: 48%;
+  width: 49%;
   background-color: rgba(0, 0, 0, 0.4);
-  padding: 20px; }
+  padding: 10px; }
   section ul {
     color: white; }
   section h2 {
@@ -90,7 +93,7 @@ section {
 
 aside {
   display: inline-block;
-  width: 48%;
+  width: 49%;
   background-color: rgba(0, 0, 0, 0.4);
   vertical-align: top;
   padding: 10px; }
