--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,3 @@
-$yellow:#EAF3C4;
-$red:#D26F46;
-$blue:#7BB7AD;
-$green:#807E58;
-$brown:#5F5A44;
-
 ///////////////////////////START HOME
 
 html, body {
@@ -11,8 +5,8 @@ html, body {
     background-image:url("../images/bg.png");
     background-size:cover;
     background-repeat:no-repeat;
-    background-position:fixed;
 }
+
 
 h2, h3 {
     color:white;
@@ -49,10 +43,8 @@ img.bg {
 
  #homeLogo {
      opacity:.8;
-     max-width:400px;
+     max-width:350px;
      height:auto;
-     /* margin-right:auto;
-     margin-left:auto; */
  }
 
  #homeLogo:hover {
@@ -75,6 +67,7 @@ img.bg {
 
 
  .accHead {
+     overflow:auto;
      color:black;
      border:none;
      .panel {
@@ -88,7 +81,10 @@ img.bg {
 
  .homeWrap{
      font-size:1.2em;
-     margin-top:20%;
+     margin:10%;
+     margin-top:10%;
+     height:340px;
+     overflow:auto;
  }
 ////////////////////////////////END HOME
 
@@ -103,15 +99,18 @@ img.bg {
 
 .addWrap {
     width:100%;
-    display:inline-block;
+    height:60%;
+    margin:10px;
+    overflow:auto;
     font-family: 'Lato', sans-serif;
+
 }
 
 section {
     display:inline-block;
-    width:48%;
+    width:49%;
     background-color:rgba(0,0,0,.4);
-    padding:20px;
+    padding:10px;
     ul {
         color:white;
     }
@@ -125,7 +124,7 @@ section {
 
 aside {
     display:inline-block;
-    width:48%;
+    width:49%;
     background-color:rgba(0,0,0,.4);
     vertical-align:top;
     padding:10px;
