--- a/styles/main.css
+++ b/styles/main.css
@@ -78,8 +78,7 @@ img.bg {
   width: 100%;
   height: 60%;
   margin: 10px;
-  overflow: auto;
-  font-family: 'Lato', sans-serif; }
+  overflow: auto; }
 
 section {
   display: inline-block;
