--- a/views/recipeForm.html
+++ b/views/recipeForm.html
@@ -1,5 +1,3 @@
-
-
 <div class="addWrap">
 
 <section>
@@ -39,7 +37,7 @@
       <h4>{{ingredient.amount}} {{ingredient.type}} {{ingredient.name}} </h4>
     </li>
   </ul>
-  <h3>Directions</h3>
+  <h3>Directions:</h3>
   <textarea= class="directions">{{newRecipe.instructions}}</textarea>
 </aside>
 </div>
