made form look amazing, fixed scrolling on home

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,8 @@ html, body {
   height: 100%;
   background-image: url("../images/bg.png");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  overflow: hidden; }
 
 h2, h3 {
   color: white; }
@@ -60,12 +61,18 @@ img.bg {
     .accHead .panel .panel-heading {
       background-color: rgba(255, 255, 255, 0.7); }
 
+.container {
+  overflow: auto;
+  position: absolute;
+  bottom: 1px;
+  height: 60%;
+  width: 100%; }
+
 .homeWrap {
   font-size: 1.2em;
-  margin: 10%;
-  margin-top: 10%;
-  height: 340px;
-  overflow: auto; }
+  height: 100%;
+  margin-left: 10%;
+  margin-right: 10%; }
 
 .groceryWrap {
   background-color: rgba(104, 92, 97, 0.7);
@@ -79,18 +86,30 @@ img.bg {
   height: 60%;
   margin: 10px;
   overflow: auto; }
+  .addWrap ul {
+    color: white; }
+  .addWrap h2 {
+    text-align: center;
+    text-decoration: underline; }
+  .addWrap h3 {
+    font-weight: lighter; }
 
 section {
   display: inline-block;
   width: 49%;
   background-color: rgba(0, 0, 0, 0.4);
   padding: 10px; }
-  section ul {
-    color: white; }
-  section h2 {
-    text-decoration: underline; }
-  section h3 {
-    font-weight: lighter; }
+  section .col1 {
+    display: inline-block;
+    width: 230px;
+    margin: 0;
+    padding: 0; }
+  section .col2 {
+    display: inline-block;
+    width: 230px;
+    margin: 0;
+    padding: 0;
+    vertical-align: top; }
 
 aside {
   display: inline-block;
@@ -98,12 +117,6 @@ aside {
   background-color: rgba(0, 0, 0, 0.4);
   vertical-align: top;
   padding: 10px; }
-  aside h2 {
-    text-decoration: underline; }
-  aside h3 {
-    font-weight: lighter; }
-  aside ul {
-    color: white; }
   aside .directions {
     color: white;
     font-size: 1.2em; }
