--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div ng-controller="homeCtrl">
 <div class="homeWrap">
 <h2>Recipes</h2>
@@ -36,5 +36,6 @@
 
 
 
+</div>
 </div>
 </div>
