--- a/views/recipeForm.html
+++ b/views/recipeForm.html
@@ -3,10 +3,10 @@
 <section>
     <h2>Add a new recipe</h2>
 <form action="">
-
+    <div class="col1">
   <h3>Title:</h3><input type="text" ng-model="newRecipe.title" placeholder="Title"></p>
-  <h3>Ingredients:</h3>
-  <input type="text" ng-model="ingredients.amount" placeholder="Amount">
+  <h3>Ingredients:</h3><p>
+  <input type="text" style="width:70px;" ng-model="ingredients.amount" placeholder="Amount">
   <select ng-model="ingredients.type">
     <option value="">_</option>
     <option value="cup">cups</option>
@@ -15,18 +15,21 @@
     <option value="pints">pints</option>
     <option value="qts">quarts</option>
     <option value="gallons">gallons</option>
-</select><br>
+</select></p>
   <input type="text" placeholder="Ingredient" ng-model="ingredients.name">
   <button ng-click="addIngredient(ingredients)">ADD</button>
   <ul>
     <li ng-repeat="ingredient in ingredientArray">
       <h4>{{ingredient.amount}} {{ingredient.type}} {{ingredient.name}} </h4>
     </li>
-  </ul>
+</ul>
+</div>
+    <div class="col2">
   <h3>Instructions:</h3>
   <textarea ng-model="newRecipe.instructions" name="" id="" cols="23" rows="5"></textarea><br>
   <button type="submit" ng-click="recipeSubmit(newRecipe)">SUBMIT</button>
 </form>
+    </div>
 </section>
 
 <aside>
