--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,13 +1,15 @@
 ///////////////////////////START HOME
 
-html, body {
+body, html {
     height:100%;
     background-image:url("../images/bg.png");
     background-size:cover;
     background-repeat:no-repeat;
-    overflow:hidden;
 }
 
+h3 {
+    font-weight:lighter;
+}
 
 h2, h3 {
     color:white;
@@ -58,13 +60,19 @@ img.bg {
      color:white;
      margin: 0px; margin-top: 5px; margin-right:5px;
      opacity:.6;
-     text-align:right;
-     transition:opacity .3s ease-in-out;
+     text-align:center;
+     transition:all .3s ease-in-out;
+
  }
 
- .fa:hover {
-     opacity:1;
- }
+#first:hover {
+    color:#EB8921;
+}
+#second:hover {
+    color:#FF6347;
+}
+
+
 
 
  .accHead {
@@ -97,19 +105,28 @@ img.bg {
 ////////////////////////////////END HOME
 
 .groceryWrap{
-  background-color:rgba(104,92,97,.7);
-  border:1px solid white;
-  border-radius:10px;
-  color:white;
-  font-family: 'Cutive', serif;
+    background-color:rgba(0,0,0,.4);
+    font-size:1.3em;
+    padding:10px;
+    margin-left:10%;
+    margin-right:10%;
+    overflow:auto;
+    color:white;
+    .fa {
+        font-size:1em;
+    }
+    .fa:hover {
+        color:red;
+    }
+    input {
+        width:150px;
+    }
 }
-
 
 ////////////////////////////////ADD RECIPE
 
 .addWrap {
     width:100%;
-    height:60%;
     margin:10px;
     overflow:auto;
     ul {
@@ -118,9 +135,6 @@ img.bg {
     h2 {
         text-align:center;
         text-decoration:underline;
-    }
-    h3 {
-        font-weight:lighter;
     }
 
 }
