--- a/views/recipeForm.html
+++ b/views/recipeForm.html
@@ -11,6 +11,7 @@
     <option value="cup">cups</option>
     <option value="tbsp">tbsp</option>
     <option value="tsp">tsp</option>
+    <option value="oz">ounces</option>
     <option value="pints">pints</option>
     <option value="qts">quarts</option>
     <option value="gallons">gallons</option>
