--- a/views/home.html
+++ b/views/home.html
@@ -16,9 +16,9 @@
           <button ng-click="editIngredient = true">Edit</button>
         </div>
         <form ng-show="editIngredient" ng-submit="editIngredient = false">
-          <input type="text" ng-model="ingredient.amount">
-          <input type="text" ng-model="ingredient.type">
-          <input type="text" ng-model="ingredient.name">
+          <input type="text" ng-model="ingredient.amount" placeholder="Amount">
+          <input type="text" ng-model="ingredient.type" placeholder="Measurement Type">
+          <input type="text" ng-model="ingredient.name" placeholder="Ingredient">
           <button type="submit">Submit</button>
         </form>
       </div>
