--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,12 @@ button {
 button:hover {
   background-color: #c8c8c8; }
 
+.disabled {
+  opacity: 0.3; }
+
+.disabled:hover {
+  background-color: rgba(255, 255, 255, 0.001); }
+
 img.bg {
   min-height: 100%;
   min-width: 100%;
