--- a/views/groceryList.html
+++ b/views/groceryList.html
@@ -18,10 +18,11 @@
     <h3>Add grocery item:</h3>
     <input type="text" ng-model="groceryItem.amount" placeholder="1/2">
     <select ng-model="groceryItem.type">
-      <option value="">_</option>
+      <option value=" " selected="selected">_</option>
       <option value="cup">cups</option>
       <option value="tbsp">tbsp</option>
       <option value="tsp">tsp</option>
+      <option value="oz">ounces</option>
       <option value="pints">pints</option>
       <option value="qts">quarts</option>
       <option value="gallons">gallons</option>
