--- a/styles/main.scss
+++ b/styles/main.scss
@@ -32,6 +32,15 @@ button:hover {
     background-color:rgba(200,200,200,1)
 }
 
+
+.disabled {
+    opacity:.4
+}
+
+.disabled:hover {
+    background-color:rgba(255,255,255,.001);
+}
+
 img.bg {
   min-height: 100%;
   min-width: 100%;
@@ -102,6 +111,8 @@ img.bg {
      margin-left:10%;
      margin-right:10%;
  }
+
+
 ////////////////////////////////END HOME
 
 .groceryWrap{
