--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,3 @@
-.mycss-animation {
-  -webkit-transition: 1s linear all;
-  -moz-transition: 1s linear all;
-  -o-transition: 1s linear all;
-  transition: 1s linear all;
-  /* future proof */
-  background: red; }
-
-.mycss-animation.mycss-animation-active {
-  background: blue; }
-
 body, html {
   height: 100%;
   background-image: url("../images/bg.png");
@@ -68,11 +57,27 @@ img.bg {
   text-align: center;
   transition: all 0.3s ease-in-out; }
 
+.edit {
+  font-size: 1.3em;
+  opacity: 0.8;
+  transition: all 0.3s ease-in-out; }
+
+.edit:hover {
+  font-size: 1.5em;
+  cursor: pointer;
+  opacity: 1; }
+
+.add, .del {
+  font-size: 1em;
+  opacity: 1; }
+
 #first:hover {
-  color: #EB8921; }
+  color: #EB8921;
+  transform: scale(1.2); }
 
 #second:hover {
-  color: #FF6347; }
+  color: #FF6347;
+  transform: scale(1.2); }
 
 .accHead {
   overflow: auto;
