--- a/styles/main.css
+++ b/styles/main.css
@@ -162,3 +162,24 @@ input, textarea {
 select {
   background-color: rgba(255, 255, 255, 0.001);
   color: white; }
+
+@media screen and (device-aspect-ratio: 40/71), screen and (device-aspect-ratio: 3/4) {
+  #homeLogo {
+    max-width: 300px;
+    height: auto; }
+  .container {
+    padding-top: 10px;
+    height: 50%; }
+  .homeWrap {
+    font-size: 1.2em;
+    height: 100%;
+    margin-left: 0;
+    margin-right: 0; }
+  section {
+    width: 100%; }
+  aside {
+    display: none; }
+  .groceryWrap {
+    padding: 5px;
+    margin-left: 0;
+    margin-right: 0; } }
