--- a/styles/main.scss
+++ b/styles/main.scss
@@ -216,3 +216,40 @@ select {
 }
 
 ////////////////////////////END ADDRECIPE
+
+
+////////////IPHONE5
+@media screen and (device-aspect-ratio: 40/71), screen and (device-aspect-ratio: 3/4) {
+
+     #homeLogo {
+         max-width:300px;
+         height:auto;
+     }
+
+     .container {
+         padding-top:10px;
+         height:50%;
+     }
+
+     .homeWrap{
+         font-size:1.2em;
+         height:100%;
+         margin-left:0;
+         margin-right:0;
+     }
+
+     section {
+         width:100%;
+     }
+     aside {
+         display:none;
+     }
+
+     .groceryWrap{
+
+         padding:5px;
+         margin-left:0;
+         margin-right:0;
+     }
+
+}
