added search filter for recipes'

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,11 @@ h3 {
 h2, h3 {
   color: white; }
 
+h2 span {
+  padding: 2px;
+  font-size: 0.7em;
+  font-weight: lighter; }
+
 header {
   width: 100%;
   text-align: center; }
@@ -163,7 +168,7 @@ select {
   background-color: rgba(255, 255, 255, 0.001);
   color: white; }
 
-@media screen and (device-aspect-ratio: 40/71), screen and (device-aspect-ratio: 3/4) {
+@media screen and (min-width: 0) and (max-width: 639px) {
   #homeLogo {
     max-width: 300px;
     height: auto; }
@@ -175,10 +180,14 @@ select {
     height: 100%;
     margin-left: 0;
     margin-right: 0; }
+  #hidden {
+    display: none; }
   section {
     width: 100%; }
   aside {
     display: none; }
+  .addWrap {
+    margin: 0; }
   .groceryWrap {
     padding: 5px;
     margin-left: 0;
