--- a/styles/main.css
+++ b/styles/main.css
@@ -168,6 +168,31 @@ select {
   background-color: rgba(255, 255, 255, 0.001);
   color: white; }
 
+.slideup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%; }
+
+.slideup.ng-enter, .slideup.ng-leave {
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease; }
+
+.slideup.ng-enter {
+  top: 100%; }
+
+.slideup.ng-enter-active {
+  top: 0; }
+
+.slideup.ng-leave {
+  top: 0; }
+
+.slideup.ng-leave-active {
+  top: -100%; }
+
 @media screen and (min-width: 0) and (max-width: 639px) {
   #homeLogo {
     max-width: 300px;
