--- a/styles/main.css
+++ b/styles/main.css
@@ -105,6 +105,8 @@ img.bg {
   height: 100%;
   margin-left: 10%;
   margin-right: 10%; }
+  .homeWrap textarea {
+    width: 100%; }
 
 .groceryWrap {
   background-color: rgba(0, 0, 0, 0.4);
