fixed transitions a bit more

--- a/styles/main.css
+++ b/styles/main.css
@@ -135,24 +135,24 @@ img.bg {
 
 section {
   display: inline-block;
-  width: 49%;
+  width: 55%;
   background-color: rgba(0, 0, 0, 0.4);
   padding: 10px; }
   section .col1 {
     display: inline-block;
-    width: 230px;
+    width: 200px;
     margin: 0;
     padding: 0; }
   section .col2 {
     display: inline-block;
-    width: 230px;
+    width: 150px;
     margin: 0;
     padding: 0;
     vertical-align: top; }
 
 aside {
   display: inline-block;
-  width: 49%;
+  width: 40%;
   background-color: rgba(0, 0, 0, 0.4);
   vertical-align: top;
   padding: 10px; }
@@ -193,7 +193,8 @@ select {
   top: 0; }
 
 .slideup.ng-leave-active {
-  top: -100%; }
+  top: -100%;
+  opacity: 0; }
 
 @media screen and (min-width: 0) and (max-width: 639px) {
   #homeLogo {
