changed animation to slide, fixed animation when addding ingreds

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -132,9 +132,8 @@ img.bg {
 
  .container {
      overflow:auto;
-     position:absolute;
-     bottom:1px;
-     height:60%;
+     position:relative;
+     height:100%;
      width:100%;
  }
 
@@ -155,6 +154,7 @@ img.bg {
     background-color:rgba(0,0,0,.4);
     font-size:1.3em;
     padding:10px;
+    margin-top:10px;
     margin-left:10%;
     margin-right:10%;
     overflow:auto;
@@ -188,12 +188,12 @@ img.bg {
 
 section {
     display:inline-block;
-    width:55%;
+    width:57%;
     background-color:rgba(0,0,0,.4);
     padding:10px;
     .col1 {
         display:inline-block;
-        width:200px;
+        width:220px;
         margin: 0; padding:0;
 
     }
@@ -231,34 +231,32 @@ select {
 }
 
 ////////////////////////////END ADDRECIPE
-.slideup {
+.slide {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
+    width:100%;
+    height: 55%;
+    bottom:0px;
 }
-.slideup.ng-enter,
-.slideup.ng-leave {
+.slide.ng-enter,
+.slide.ng-leave {
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
     transition: all 1s ease;
 }
-.slideup.ng-enter {
-    top: 100%;
+.slide.ng-enter {
+    left: 100%;
 }
-.slideup.ng-enter-active {
-    top: 0;
+.slide.ng-enter-active {
+    left: 0;
 }
-.slideup.ng-leave {
-    top: 0;
+.slide.ng-leave {
+    left: 0;
 }
-.slideup.ng-leave-active {
-    top: -100%;
+.slide.ng-leave-active {
+    left: -100%;
     opacity:0;
 }
-
 ////////////IPHONE5
 @media screen and (min-width:0) and (max-width:639px) {
 
@@ -269,7 +267,8 @@ select {
 
      .container {
          padding-top:10px;
-         height:50%;
+
+
      }
 
      .homeWrap{
@@ -277,6 +276,7 @@ select {
          height:100%;
          margin-left:0;
          margin-right:0;
+
      }
     //  textarea{
     //    width: 100%;
