--- a/views/groceryList.html
+++ b/views/groceryList.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div class="groceryWrap" ng-controller="groceryController">
 <h2>Groceries:</h2>
   <ul>
@@ -34,4 +34,5 @@
     <button class="add-btn" ng-click="additem(groceryItem)">Add</button>
 
   </form>
+</div>
 </div>
