--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,6 @@
 <div ng-controller="homeCtrl">
-<div class="homeWrap slide">
+<div class="container">
+<div class="homeWrap">
 
 
 <h2><span><input type="text" placeholder="Search Recipes" ng-model="recipe.title"></span> </h2>
@@ -54,5 +55,6 @@
 
 
 
+</div>
 </div>
 </div>
