--- a/views/recipeForm.html
+++ b/views/recipeForm.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="addWrap">
 
 <section>
@@ -43,4 +44,5 @@
   <h3>Directions:</h3>
   <textarea= class="directions">{{newRecipe.instructions}}</textarea>
 </aside>
+</div>
 </div>
