--- a/styles/main.scss
+++ b/styles/main.scss
@@ -132,7 +132,7 @@ img.bg {
 
  .container {
      overflow:auto;
-     position:relative;
+     position:absolute;
      height:100%;
      width:100%;
  }
