--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
         <button ng-click="editServe = true">Change servings</button>
       </div>
       <form ng-show="editServe" ng-submit="editServe = false">
-        <textarea name="" id="" cols="1" rows="1" ng-model="recipe.serves">{{recipe.servess}}</textarea>
+        <textarea name="" id="" cols="1" rows="1" ng-model="recipe.serves">{{recipe.serves}}</textarea>
         <br><button type="submit">Submit</button>
       </form>
 
