--- a/views/groceryList.html
+++ b/views/groceryList.html
@@ -2,17 +2,17 @@
 <div class="groceryWrap" ng-controller="groceryController">
 <h2>Groceries:</h2>
   <ul>
-    <li ng-repeat="item in groceryList track by $index">
+    <li ng-repeat="item in groceryList">
       <div ng-if="item.type != null">
         <span>{{item.name}}</span>
         <i class="fa fa-times fa-1" ng-click="deleteGrocery($index)"></i>
       </div>
-      <div ng-if="item.type === null && item.amount != null">
+      <div ng-if="(item.type === null || item.type === undefined)  && item.amount != null">
         <span>{{item.amount}}</span>
         <span>{{item.name}}</span>
         <i class="fa fa-times fa-1" ng-click="deleteGrocery($index)"></i>
       </div>
-      <div ng-if="item.type === null && item.amount === null">
+      <div ng-if="(item.type === null || item.type === undefined) && item.amount === null">
         <span>{{item.name}}</span>
         <i class="fa fa-times fa-1" ng-click="deleteGrocery($index)"></i>
       </div>
